// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tokenizer should tokenize a single non-self-closing tag 1`] = `
Array [
  Object {
    "endIdx": 4,
    "startIdx": 0,
    "tag": "Room",
    "type": "TagOpenBegin",
  },
  Object {
    "endIdx": 5,
    "startIdx": 5,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 9,
    "isBoolean": false,
    "key": "key",
    "startIdx": 6,
    "type": "Property",
  },
  Object {
    "endIdx": 14,
    "startIdx": 10,
    "type": "KeyValue",
    "value": "ABC",
  },
  Object {
    "endIdx": 15,
    "selfClosing": false,
    "startIdx": 15,
    "type": "TagOpenEnd",
  },
  Object {
    "endIdx": 22,
    "startIdx": 16,
    "tag": "Room",
    "type": "TagClose",
  },
]
`;

exports[`tokenizer should tokenize a single self-closing tag 1`] = `
Array [
  Object {
    "endIdx": 4,
    "startIdx": 0,
    "tag": "Room",
    "type": "TagOpenBegin",
  },
  Object {
    "endIdx": 5,
    "startIdx": 5,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 9,
    "isBoolean": false,
    "key": "key",
    "startIdx": 6,
    "type": "Property",
  },
  Object {
    "endIdx": 14,
    "startIdx": 10,
    "type": "KeyValue",
    "value": "ABC",
  },
  Object {
    "endIdx": 15,
    "startIdx": 15,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 17,
    "selfClosing": true,
    "startIdx": 16,
    "type": "TagOpenEnd",
  },
]
`;

exports[`tokenizer should tokenize comments 1`] = `
Array [
  Object {
    "endIdx": 5,
    "startIdx": 0,
    "tag": "Asset",
    "type": "TagOpenBegin",
  },
  Object {
    "endIdx": 6,
    "startIdx": 6,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 10,
    "isBoolean": false,
    "key": "key",
    "startIdx": 7,
    "type": "Property",
  },
  Object {
    "endIdx": 16,
    "startIdx": 11,
    "type": "KeyValue",
    "value": "Test",
  },
  Object {
    "endIdx": 17,
    "selfClosing": false,
    "startIdx": 17,
    "type": "TagOpenEnd",
  },
  Object {
    "endIdx": 35,
    "startIdx": 31,
    "tag": "Room",
    "type": "TagOpenBegin",
  },
  Object {
    "endIdx": 36,
    "startIdx": 36,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 49,
    "startIdx": 37,
    "type": "Comment",
  },
  Object {
    "endIdx": 50,
    "startIdx": 50,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 54,
    "isBoolean": false,
    "key": "key",
    "startIdx": 51,
    "type": "Property",
  },
  Object {
    "endIdx": 59,
    "startIdx": 55,
    "type": "KeyValue",
    "value": "ABC",
  },
  Object {
    "endIdx": 60,
    "selfClosing": false,
    "startIdx": 60,
    "type": "TagOpenEnd",
  },
  Object {
    "endIdx": 89,
    "startIdx": 78,
    "tag": "Description",
    "type": "TagOpenBegin",
  },
  Object {
    "endIdx": 90,
    "selfClosing": false,
    "startIdx": 90,
    "type": "TagOpenEnd",
  },
  Object {
    "endIdx": 128,
    "startIdx": 112,
    "type": "Description",
    "value": "Test description",
  },
  Object {
    "endIdx": 116,
    "startIdx": 116,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 136,
    "startIdx": 128,
    "type": "Comment",
  },
  Object {
    "endIdx": 170,
    "startIdx": 158,
    "type": "Comment",
  },
  Object {
    "endIdx": 203,
    "startIdx": 192,
    "type": "Description",
    "value": "End of test",
  },
  Object {
    "endIdx": 219,
    "startIdx": 203,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 233,
    "startIdx": 220,
    "tag": "Description",
    "type": "TagClose",
  },
  Object {
    "endIdx": 253,
    "startIdx": 247,
    "tag": "Room",
    "type": "TagClose",
  },
  Object {
    "endIdx": 270,
    "startIdx": 263,
    "tag": "Asset",
    "type": "TagClose",
  },
]
`;

exports[`tokenizer should tokenize descriptions 1`] = `
Array [
  Object {
    "endIdx": 5,
    "startIdx": 0,
    "tag": "Asset",
    "type": "TagOpenBegin",
  },
  Object {
    "endIdx": 6,
    "startIdx": 6,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 10,
    "isBoolean": false,
    "key": "key",
    "startIdx": 7,
    "type": "Property",
  },
  Object {
    "endIdx": 16,
    "startIdx": 11,
    "type": "KeyValue",
    "value": "Test",
  },
  Object {
    "endIdx": 17,
    "selfClosing": false,
    "startIdx": 17,
    "type": "TagOpenEnd",
  },
  Object {
    "endIdx": 35,
    "startIdx": 31,
    "tag": "Room",
    "type": "TagOpenBegin",
  },
  Object {
    "endIdx": 36,
    "startIdx": 36,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 40,
    "isBoolean": false,
    "key": "key",
    "startIdx": 37,
    "type": "Property",
  },
  Object {
    "endIdx": 45,
    "startIdx": 41,
    "type": "KeyValue",
    "value": "ABC",
  },
  Object {
    "endIdx": 46,
    "selfClosing": false,
    "startIdx": 46,
    "type": "TagOpenEnd",
  },
  Object {
    "endIdx": 75,
    "startIdx": 64,
    "tag": "Description",
    "type": "TagOpenBegin",
  },
  Object {
    "endIdx": 76,
    "selfClosing": false,
    "startIdx": 76,
    "type": "TagOpenEnd",
  },
  Object {
    "endIdx": 114,
    "startIdx": 98,
    "type": "Description",
    "value": "Test description",
  },
  Object {
    "endIdx": 134,
    "startIdx": 114,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 139,
    "startIdx": 135,
    "tag": "Link",
    "type": "TagOpenBegin",
  },
  Object {
    "endIdx": 140,
    "startIdx": 140,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 144,
    "isBoolean": false,
    "key": "key",
    "startIdx": 141,
    "type": "Property",
  },
  Object {
    "endIdx": 149,
    "startIdx": 145,
    "type": "KeyValue",
    "value": "DEF",
  },
  Object {
    "endIdx": 150,
    "selfClosing": false,
    "startIdx": 150,
    "type": "TagOpenEnd",
  },
  Object {
    "endIdx": 160,
    "startIdx": 151,
    "type": "Description",
    "value": "link text",
  },
  Object {
    "endIdx": 155,
    "startIdx": 155,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 166,
    "startIdx": 160,
    "tag": "Link",
    "type": "TagClose",
  },
  Object {
    "endIdx": 199,
    "startIdx": 188,
    "type": "Description",
    "value": "End of test",
  },
  Object {
    "endIdx": 215,
    "startIdx": 199,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 229,
    "startIdx": 216,
    "tag": "Description",
    "type": "TagClose",
  },
  Object {
    "endIdx": 249,
    "startIdx": 243,
    "tag": "Room",
    "type": "TagClose",
  },
  Object {
    "endIdx": 266,
    "startIdx": 259,
    "tag": "Asset",
    "type": "TagClose",
  },
]
`;

exports[`tokenizer should tokenize nested tags 1`] = `
Array [
  Object {
    "endIdx": 5,
    "startIdx": 0,
    "tag": "Asset",
    "type": "TagOpenBegin",
  },
  Object {
    "endIdx": 6,
    "startIdx": 6,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 10,
    "isBoolean": false,
    "key": "key",
    "startIdx": 7,
    "type": "Property",
  },
  Object {
    "endIdx": 16,
    "startIdx": 11,
    "type": "KeyValue",
    "value": "Test",
  },
  Object {
    "endIdx": 17,
    "selfClosing": false,
    "startIdx": 17,
    "type": "TagOpenEnd",
  },
  Object {
    "endIdx": 35,
    "startIdx": 31,
    "tag": "Room",
    "type": "TagOpenBegin",
  },
  Object {
    "endIdx": 36,
    "startIdx": 36,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 43,
    "isBoolean": true,
    "key": "global",
    "startIdx": 37,
    "type": "Property",
    "value": true,
  },
  Object {
    "endIdx": 47,
    "isBoolean": false,
    "key": "key",
    "startIdx": 44,
    "type": "Property",
  },
  Object {
    "endIdx": 52,
    "startIdx": 48,
    "type": "KeyValue",
    "value": "ABC",
  },
  Object {
    "endIdx": 53,
    "selfClosing": false,
    "startIdx": 53,
    "type": "TagOpenEnd",
  },
  Object {
    "endIdx": 78,
    "startIdx": 71,
    "tag": "Feature",
    "type": "TagOpenBegin",
  },
  Object {
    "endIdx": 79,
    "startIdx": 79,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 83,
    "isBoolean": false,
    "key": "key",
    "startIdx": 80,
    "type": "Property",
  },
  Object {
    "endIdx": 88,
    "startIdx": 84,
    "type": "KeyValue",
    "value": "DEF",
  },
  Object {
    "endIdx": 89,
    "startIdx": 89,
    "type": "Whitespace",
  },
  Object {
    "endIdx": 91,
    "selfClosing": true,
    "startIdx": 90,
    "type": "TagOpenEnd",
  },
  Object {
    "endIdx": 111,
    "startIdx": 105,
    "tag": "Room",
    "type": "TagClose",
  },
  Object {
    "endIdx": 128,
    "startIdx": 121,
    "tag": "Asset",
    "type": "TagClose",
  },
]
`;
